// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountDropdown> renders the account created component inside account dropdown 1`] = `
<DocumentFragment>
  <button
    data-role="mask"
  />
  <div
    aria-label="account dropdown"
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="body"
      >
        <h2
          class="header"
        >
          Your account was successfully created
        </h2>
        <div
          class="textBlock"
        >
          You will receive a link at 
          <b />
          . Access that link to confirm your email address.
        </div>
        <div
          class="actions"
        >
          <button
            class="root"
            type="button"
          >
            <span
              class="signin"
            >
              Sign In
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AccountDropdown> renders the change password component inside account dropdown 1`] = `
<DocumentFragment>
  <button
    data-role="mask"
  />
  <div
    aria-label="account dropdown"
    class="root"
  >
    <div
      class="root"
    >
      <form>
        <div
          class="root"
        >
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Current Password
          </span>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                aria-label="old-password"
                class="input"
                name="oldPassword"
                type="password"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
        <div
          class="root"
        >
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            New Password
          </span>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                aria-label="password"
                autocomplete="password"
                class="input"
                name="password"
                type="password"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
        <div
          class="root"
        >
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Confirm New Password
          </span>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                aria-label="confirm"
                class="input"
                name="confirm"
                type="password"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
        <div
          class="actions"
        >
          <button
            aria-label="submit"
            class="root_highPriority"
            type="submit"
          >
            <span
              class="content"
            >
              Change Password
            </span>
          </button>
          <button
            aria-label="cancel"
            class="root_normalPriority"
            type="button"
          >
            <span
              class="content"
            >
              Cancel
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AccountDropdown> renders the create account component inside account dropdown 1`] = `
<DocumentFragment>
  <button
    data-role="mask"
  />
  <div
    aria-label="account dropdown"
    class="root"
  >
    <form>
      <p>
        Check out faster, use multiple addresses, track orders and more by creating an account!
      </p>
      <div
        class="root"
      >
        <span
          class="label"
        >
          <span
            class="requiredSymbol"
          />
          First Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              aria-label="firstname"
              autocomplete="given-name"
              class="input"
              name="customer.firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <span
          class="label"
        >
          <span
            class="requiredSymbol"
          />
          Last Name
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              aria-label="lastname"
              autocomplete="family-name"
              class="input"
              name="customer.lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <span
          class="label"
        >
          <span
            class="requiredSymbol"
          />
          Email address
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              aria-label="email"
              autocomplete="email"
              class="input"
              name="customer.email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <span
          class="label"
        >
          <span
            class="requiredSymbol"
          />
          Password
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              aria-label="password"
              autocomplete="new-password"
              class="input"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <span
          class="label"
        >
          <span
            class="requiredSymbol"
          />
          Confirm Password
        </span>
        <span
          class="root"
        >
          <span
            class="input"
          >
            <input
              aria-label="confirm"
              class="input"
              name="confirm"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div>
        <label
          class="root"
        >
          <span
            class="icon"
          />
          <input
            aria-label="subscribe"
            class="input"
            name="subscribe"
            type="checkbox"
          />
          <span
            class="label"
          >
            Subscribe to news and updates
          </span>
        </label>
        <p
          class="root"
        />
      </div>
      <div />
      <div>
        <button
          aria-label="submit"
          class="root_highPriority"
          type="submit"
        >
          <span
            class="content"
          >
            Submit
          </span>
        </button>
        <button
          aria-label="cancel"
          class="root_normalPriority"
          type="button"
        >
          <span
            class="content"
          >
            Cancel
          </span>
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`<AccountDropdown> renders the forgot password component inside account dropdown 1`] = `
<DocumentFragment>
  <button
    data-role="mask"
  />
  <div
    aria-label="account dropdown"
    class="root"
  >
    <div
      class="root"
    >
      <p
        class="instructions"
      >
        Enter your email below to receive a password reset link.
      </p>
      <form>
        <div
          class="root"
        >
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Email address
          </span>
          <span
            class="root"
          >
            <span
              class="input"
            >
              <input
                aria-label="email"
                autocomplete="email"
                class="input"
                name="email"
                value=""
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
        <div>
          <button
            aria-label="submit"
            class="root_highPriority"
            type="submit"
          >
            <span
              class="content"
            >
              Submit
            </span>
          </button>
          <button
            aria-label="cancel"
            class="root_normalPriority"
            type="button"
          >
            <span
              class="content"
            >
              Cancel
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AccountDropdown> renders the my account component inside account dropdown 1`] = `
<DocumentFragment>
  <button
    data-role="mask"
  />
  <div
    aria-label="account dropdown"
    class="root"
  >
    <div
      class="root"
    >
      <div
        class="user"
      >
        <h2
          class="title"
        >
           
        </h2>
        <span
          class="subtitle"
        />
      </div>
      <div
        class="actions"
      >
        <button
          classes="[object Object]"
          type="button"
        >
          <span>
            <span>
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="11"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="11"
                />
                <path
                  d="M7 11V7a5 5 0 0 1 10 0v4"
                />
              </svg>
            </span>
            <span>
              Change Password
            </span>
          </span>
        </button>
        <button
          classes="[object Object]"
          type="button"
        >
          <span>
            <span>
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"
                />
                <path
                  d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"
                />
              </svg>
            </span>
            <span>
              Address Book
            </span>
          </span>
        </button>
        <button
          classes="[object Object]"
          type="button"
        >
          <span>
            <span>
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="16"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="8"
                  y2="8"
                />
              </svg>
            </span>
            <span>
              Account Information
            </span>
          </span>
        </button>
        <button
          classes="[object Object]"
          type="button"
        >
          <span>
            <span>
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
                />
                <polyline
                  points="16 17 21 12 16 7"
                />
                <line
                  x1="21"
                  x2="9"
                  y1="12"
                  y2="12"
                />
              </svg>
            </span>
            <span>
              Sign Out
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
